Remove overflow:hidden so that yaml help tool tips aren't clipped. Fix Bug https://bugzilla.redhat.com/show_bug.cgi?id=1854214

--- a/frontend/packages/console-shared/src/components/editor/YAMLEditor.scss
+++ b/frontend/packages/console-shared/src/components/editor/YAMLEditor.scss
@@ -1,13 +1,11 @@
 .ocs-yaml-editor {
   &__root {
     flex: 1;
-    overflow: hidden;
     position: relative;
   }
 
   &__wrapper {
     position: absolute;
-    overflow: hidden;
     top: 0;
     right: 0;
     left: 0;
